fixed dropdown on mobile and main

--- a/css/index.css
+++ b/css/index.css
@@ -237,10 +237,11 @@ nav .dropdown-hidden {
 }
 nav ul {
   align-items: start;
-  justify-content: center;
+  justify-content: start;
   display: flex;
   flex-direction: column;
   margin-left: 40vw;
+  margin-top: 6rem;
   height: 100vh;
 }
 .mobile-nav {
@@ -283,6 +284,10 @@ nav ul {
 }
 .mobile-nav .mob-dropdown-hidden {
   display: none;
+}
+.mobile-nav ul {
+  margin-top: 6rem;
+  height: 100vh;
 }
 /* === Home Page Styles === */
 /* == Top Content == */
