--- a/less/home.less
+++ b/less/home.less
@@ -113,11 +113,13 @@ nav {
     }
     ul {
         align-items: start;
-        justify-content: center;
+        justify-content: start;
         display: flex;
         flex-direction: column;
         margin-left: 40vw;
+        margin-top: 6rem;
         height: 100vh;
+
     }
 }
 
@@ -149,14 +151,14 @@ nav {
 
         a {
             font-weight: bold;
-        font-size: 4.8rem;
-        line-height: 8.5rem;
-        color: @nav-bar-text;
+            font-size: 4.8rem;
+            line-height: 8.5rem;
+            color: @nav-bar-text;
 
-        &:hover{
-        color: @nav-hover-text;
-        text-decoration: none;
-        }
+            &:hover{
+            color: @nav-hover-text;
+            text-decoration: none;
+            }
         }
     }
     /* Navigation Text (Needs to be toggled to show expanded) */
@@ -165,6 +167,10 @@ nav {
         display: none;
     }
 
+    ul {
+        margin-top: 6rem;
+        height: 100vh;
+    }
 }
 
 /* === Home Page Styles === */
